--- a/www/index.html
+++ b/www/index.html
@@ -4,9 +4,13 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title>Simple List</title>
     
+    <!-- <link href="http://code.ionicframework.com/nightly/css/ionic.css" rel="stylesheet">
+    <script src="http://code.ionicframework.com/nightly/js/ionic.bundle.js"></script> -->
     <link href="css/ionic.css" rel="stylesheet">
     <script src="js/ionic.bundle.js"></script>
-  </head>
+    <!-- <script src="js/angular/angular.js"></script> -->
+     <script src="js/index.js"></script>
+ </head>
 
   <body ng-controller="MyCtrl">
 
